fix spacing

--- a/src/components/Page/Contacts.scss
+++ b/src/components/Page/Contacts.scss
@@ -2,6 +2,8 @@
 
   &__root {
     line-height: 24px;
+    letter-spacing: 1px;
+    word-spacing: 1px;
   }
 
   &__item {
